docs/0.7/_sources/api/gammapy.cube.SkyCube.rst.txt
SkyCube
=======

.. currentmodule:: gammapy.cube

.. autoclass:: SkyCube
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyCube.bin_size
      ~SkyCube.energy_width
      ~SkyCube.is_mask
      ~SkyCube.sky_image_ref

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyCube.assert_allclose
      ~SkyCube.convolve
      ~SkyCube.cutout
      ~SkyCube.empty
      ~SkyCube.empty_like
      ~SkyCube.energies
      ~SkyCube.fill_events
      ~SkyCube.from_wcs_nd_map
      ~SkyCube.info
      ~SkyCube.lookup
      ~SkyCube.plot_rgb
      ~SkyCube.read
      ~SkyCube.read_hdu
      ~SkyCube.region_mask
      ~SkyCube.reproject
      ~SkyCube.show
      ~SkyCube.sky_image
      ~SkyCube.sky_image_idx
      ~SkyCube.sky_image_integral
      ~SkyCube.sky_image_sum
      ~SkyCube.spectrum
      ~SkyCube.to_fits
      ~SkyCube.to_images
      ~SkyCube.to_sherpa_data3d
      ~SkyCube.to_wcs_nd_map
      ~SkyCube.wcs_pixel_to_skycoord
      ~SkyCube.wcs_skycoord_to_pixel
      ~SkyCube.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: bin_size
   .. autoattribute:: energy_width
   .. autoattribute:: is_mask
   .. autoattribute:: sky_image_ref

   .. rubric:: Methods Documentation

   .. automethod:: assert_allclose
   .. automethod:: convolve
   .. automethod:: cutout
   .. automethod:: empty
   .. automethod:: empty_like
   .. automethod:: energies
   .. automethod:: fill_events
   .. automethod:: from_wcs_nd_map
   .. automethod:: info
   .. automethod:: lookup
   .. automethod:: plot_rgb
   .. automethod:: read
   .. automethod:: read_hdu
   .. automethod:: region_mask
   .. automethod:: reproject
   .. automethod:: show
   .. automethod:: sky_image
   .. automethod:: sky_image_idx
   .. automethod:: sky_image_integral
   .. automethod:: sky_image_sum
   .. automethod:: spectrum
   .. automethod:: to_fits
   .. automethod:: to_images
   .. automethod:: to_sherpa_data3d
   .. automethod:: to_wcs_nd_map
   .. automethod:: wcs_pixel_to_skycoord
   .. automethod:: wcs_skycoord_to_pixel
   .. automethod:: write
